# tv

./: .gitignore  Cargo.toml  LICENSE  README.md
src/: auth.rs  cli.rs  client.rs  config.rs  ipc.rs  keys.rs  llms.txt  main.rs  server.rs  session.rs  types.rs
src/ipc/: client.rs  server.rs  session.rs
src/session/: commands.rs  dispatch.rs  prompt.rs  terminal.rs  text.rs
