[package]
name = "tv"
version = "1.0.0"
edition = "2024"
description = "Terminal for agents"
repository = "https://github.com/ingur/tv"
license = "Apache-2.0"

[dependencies]
alacritty_terminal = "0.25"
anyhow = "1"
arboard = "3"
clap = { version = "4.5", features = ["derive"] }
comfy-table = "7.2"
crossterm = "0.29"
dirs = "6"
libc = "0.2"
mio = { version = "1", features = ["os-poll"] }
portable-pty = "0.9"
rand = "0.9"
ratatui = { version = "0.30", default-features = false, features = ["crossterm", "underline-color"] }
regex = "1.12"
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }
signal-hook = "0.4"
signal-hook-mio = { version = "0.3", features = ["support-v1_0"] }
tokio = { version = "1", features = ["rt-multi-thread", "net", "sync", "signal", "time", "macros", "io-util"] }
tokio-util = "0.7"
toml = "0.9"
tracing = "0.1"
tracing-subscriber = "0.3"
unicode-width = "0.2.2"
